--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
     </h1>
     <div class="card-group">
       <div class="card">
-        <img src="/Menu/img/menu4.jpg" class="card-img-top" alt="menuhome1" />
+        <img src="Menu/img/menu4.jpg" class="card-img-top" alt="menuhome1" />
         <div class="card-body">
           <h4 class="card-title"><b>Janji Asam Manis Cinta</b></h4>
           <p class="card-text">
@@ -248,11 +248,7 @@
         </div>
       </div>
       <div class="card">
-        <img
-          src="/Menu/img/makanan3.jpg"
-          class="card-img-top"
-          alt="menuhome2"
-        />
+        <img src="Menu/img/makanan3.jpg" class="card-img-top" alt="menuhome2" />
         <div class="card-body">
           <h4 class="card-title"><b>Kentang goreng</b></h4>
           <p class="card-text">
@@ -261,7 +257,7 @@
         </div>
       </div>
       <div class="card">
-        <img src="/Menu/img/menu6.jpg" class="card-img-top" alt="menuhome3" />
+        <img src="Menu/img/menu6.jpg" class="card-img-top" alt="menuhome3" />
         <div class="card-body">
           <h4 class="card-title"><b>Janji Mocca</b></h4>
           <p class="card-text">
