--- a/Menu/index.html
+++ b/Menu/index.html
@@ -53,12 +53,15 @@
                   <a
                     class="nav-link active"
                     aria-current="page"
-                    href="/index.html"
+                    href="http://alfajjar.my.id/JK/"
                     >Home</a
                   >
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" aria-current="page" href="/index.html"
+                  <a
+                    class="nav-link"
+                    aria-current="page"
+                    href="http://alfajjar.my.id/JK/"
                     >Tentang Kami</a
                   >
                 </li>
@@ -73,7 +76,7 @@
                   <a
                     class="nav-link active"
                     aria-current="page"
-                    href="/index.html"
+                    href="http://alfajjar.my.id/JK/"
                     >Kontak Kami</a
                   >
                 </li>
@@ -104,28 +107,28 @@
       <div class="card-group">
         <div class="card">
           <img
-            src="/Menu/img/IMG-20231013-WA0001.jpg"
+            src="img/IMG-20231013-WA0001.jpg"
             class="card-img-top"
             alt="menu1"
           />
         </div>
         <div class="card">
           <img
-            src="/Menu/img/IMG-20231013-WA0002.jpg"
+            src="img/IMG-20231013-WA0002.jpg"
             class="card-img-top"
             alt="menu2"
           />
         </div>
         <div class="card">
           <img
-            src="/Menu/img/IMG-20231013-WA0003.jpg"
+            src="img/IMG-20231013-WA0003.jpg"
             class="card-img-top"
             alt="menu3"
           />
         </div>
         <div class="card">
           <img
-            src="/Menu/img/IMG-20231013-WA0004.jpg"
+            src="img/IMG-20231013-WA0004.jpg"
             class="card-img-top"
             alt="menu4"
           />
